tests/src/tests/fail/misuse-of-underscore-async.stderr
error[E0425]: cannot find value `_async` in this scope
 --> src/tests/fail/misuse-of-underscore-async.rs:5:8
  |
5 |     if _async && true {
  |        ^^^^^^ not found in this scope
